apps/collabora/middleware-https-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: force-https
  namespace: collabora
spec:
  redirectScheme:
    scheme: https
    permanent: true
