apps/collabora/ingress-admin.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: collabora-admin
  namespace: collabora
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.priority: "100"
    traefik.ingress.kubernetes.io/router.middlewares: collabora-force-https@kubernetescrd,traefik-authelia-forwardauth@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: collabora${public_host_suffix}.${delegating_domain}
      http:
        paths:
          - path: /cool/adminws/
            pathType: Prefix
            backend:
              service:
                name: collabora-collabora-online
                port:
                  number: 9980
          - path: /cool/getMetrics
            pathType: Exact
            backend:
              service:
                name: collabora-collabora-online
                port:
                  number: 9980
          - path: /browser/dist/admin/
            pathType: Prefix
            backend:
              service:
                name: collabora-collabora-online
                port:
                  number: 9980
  tls:
    - secretName: collabora-tls
      hosts:
        - collabora${public_host_suffix}.${delegating_domain}
