apps/collabora/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: collabora-online-ingress
  namespace: collabora
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: collabora
      app.kubernetes.io/name: collabora-online
      type: main
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: collabora
      ports:
        - protocol: TCP
          port: 9980
